--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<!-- PLACE METADATA AND DOCUMENT LINKS HERE -->
-		<link rel="stylesheet" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="css/index.css">
 
 	</head>
 
