--- a/editorial2.html
+++ b/editorial2.html
@@ -41,7 +41,7 @@
   </div>
 
   <div class="item">
-      <center><img src="images/The revolution at bay.jpg"></center>
+      <center><img src="images/The_revolution_at_bay.jpg"></center>
     </div>
 
 <div id="container2">
