--- a/editorials.html
+++ b/editorials.html
@@ -53,7 +53,7 @@
 </div>
   </div>
 <div class="item">
-      <center><img src="Images/gif.gif"></center>
+      <center><img src="images/pile.gif"></center>
     </div>
 
   <div id="container1">
